Add UI elements to MyAnswersVC

--- a/you-say!/you-say!/Storyboards/Principal.storyboard
+++ b/you-say!/you-say!/Storyboards/Principal.storyboard
@@ -340,19 +340,70 @@
                                     </navigationItem>
                                 </items>
                             </navigationBar>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="WX7-q3-liT">
+                                <rect key="frame" x="0.0" y="88" width="414" height="20.5"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ID" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NEZ-e0-RVv">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
+                            <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="R6J-Q9-UMz">
+                                <rect key="frame" x="0.0" y="838" width="414" height="30"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bGs-HN-NFU">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="30"/>
+                                        <state key="normal" title="Button"/>
+                                    </button>
+                                </subviews>
+                            </stackView>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="JSn-8l-qO6">
+                                <rect key="frame" x="0.0" y="116.5" width="414" height="713.5"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="answerCell" id="bAL-ty-6D0" customClass="AnswerTableViewCell" customModule="you_say_" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="bAL-ty-6D0" id="4aV-b7-uZ5">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="D5n-Oh-Yj7" id="bvU-cd-Bid"/>
+                                    <outlet property="delegate" destination="D5n-Oh-Yj7" id="hqZ-gz-FRt"/>
+                                </connections>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstItem="R6J-Q9-UMz" firstAttribute="bottom" secondItem="3wb-7M-Mc3" secondAttribute="bottom" constant="6" id="1mA-AI-eOk"/>
+                            <constraint firstItem="JSn-8l-qO6" firstAttribute="top" secondItem="WX7-q3-liT" secondAttribute="bottom" constant="8" id="23Q-Sy-PVX"/>
+                            <constraint firstItem="JSn-8l-qO6" firstAttribute="leading" secondItem="3wb-7M-Mc3" secondAttribute="leading" id="6jd-Ta-dEx"/>
+                            <constraint firstItem="WX7-q3-liT" firstAttribute="leading" secondItem="3wb-7M-Mc3" secondAttribute="leading" id="AWJ-IA-kUB"/>
+                            <constraint firstItem="R6J-Q9-UMz" firstAttribute="leading" secondItem="3wb-7M-Mc3" secondAttribute="leading" id="ESL-l6-pcx"/>
+                            <constraint firstItem="JSn-8l-qO6" firstAttribute="trailing" secondItem="3wb-7M-Mc3" secondAttribute="trailing" id="MVI-Y3-eWU"/>
                             <constraint firstItem="q4v-sW-ono" firstAttribute="leading" secondItem="3wb-7M-Mc3" secondAttribute="leading" id="QbP-Fj-eiT"/>
+                            <constraint firstItem="WX7-q3-liT" firstAttribute="trailing" secondItem="3wb-7M-Mc3" secondAttribute="trailing" id="T7y-0w-kQi"/>
+                            <constraint firstItem="R6J-Q9-UMz" firstAttribute="top" secondItem="JSn-8l-qO6" secondAttribute="bottom" constant="8" id="VsF-w0-uAl"/>
                             <constraint firstItem="q4v-sW-ono" firstAttribute="trailing" secondItem="3wb-7M-Mc3" secondAttribute="trailing" id="Z8U-8F-OjT"/>
                             <constraint firstItem="q4v-sW-ono" firstAttribute="top" secondItem="3wb-7M-Mc3" secondAttribute="top" id="cND-tR-0O7"/>
+                            <constraint firstItem="WX7-q3-liT" firstAttribute="top" secondItem="q4v-sW-ono" secondAttribute="bottom" id="hGA-YL-sqa"/>
+                            <constraint firstItem="R6J-Q9-UMz" firstAttribute="trailing" secondItem="3wb-7M-Mc3" secondAttribute="trailing" id="s3K-7N-eJr"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="3wb-7M-Mc3"/>
                     </view>
+                    <connections>
+                        <outlet property="tableView" destination="JSn-8l-qO6" id="i0C-IT-auH"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Hyl-DZ-yAf" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="316" y="1256"/>
+            <point key="canvasLocation" x="314.49275362318843" y="1255.5803571428571"/>
         </scene>
     </scenes>
     <resources>
