Placeholder for textView

--- a/you-say!/you-say!/Storyboards/Principal.storyboard
+++ b/you-say!/you-say!/Storyboards/Principal.storyboard
@@ -358,7 +358,7 @@
                                         <rect key="frame" x="0.0" y="0.0" width="207" height="36.5"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences" secureTextEntry="YES"/>
                                     </textView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bGs-HN-NFU">
                                         <rect key="frame" x="207" y="0.0" width="207" height="36.5"/>
